--- a/public/index.html
+++ b/public/index.html
@@ -9,19 +9,46 @@
     <title>Snowpack App</title>
   </head>
   <body>
-    <img id="img" src="/logo.svg" />
-    <canvas id="canvas"></canvas>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div class="container">
+    <div class="combats">
+      <p class="vie">100/100pdv</p>
+      <div class="pokemon">
+        <img src="pokeball.jpg" alt="" class="ball ball4">
+        <img src="pokeball.jpg" alt="" class="ball ball5">
+        <img src="pokeball.jpg" alt="" class="ball ball6">
+      </div>
+      <img  src="Salameche1.png" alt="" class="pokemon1 none4">
+      <img  src="papilusion.png" alt="" class="pokemon1 none5">
+      <img  src="darda.png" alt="" class="pokemon1 none6">
+      <img  src="Bleu1.png" alt="" class="pokemon1 none8">
+      <p class="vie2">100/100pdv</p>
+      <div class="pokeball">
+        <img src="pokeball.jpg" alt="" class="ball ball1">
+        <img src="pokeball.jpg" alt="" class="ball ball2">
+        <img src="pokeball.jpg" alt="" class="ball ball3">
+      </div>
+      <img  src="Bulbizarre.png" alt="" class="pokemon2 none1">
+      <img  src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/019.png" alt="" class="pokemon2 none2">
+      <img  src="roucoule1.png" alt="" class="pokemon2 none3">
+      <img  src="red.png" alt="" class="pokemon2 none7">
+
+   
+    </div>
+      <div class="discution">
+        <p class="Texte">Choisir ton attaque</p>
+      </div>
+      <div  class="button">
+      <div class="oue">
+        <button class='charge'>Charger</button>
+        <button class='flammeche'>flammeche</button>
+      </div>
+      <div class="oue2">
+      <button class="vive-attaque">Vive-Attaque</button>
+      <button class="Lance-Flammes">Lance-Flammes</button>
+    </div>
+      </div>
+    </div>
+
     <script type="module" src="/dist/index.js"></script>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
